# object-tracker-demo

./: README.md
cpp/: CMakeLists.txt  tutorial_multitracker.cpp
python/: tracker-demo.py
